# sneaky-face

./: .gitignore  CMakeLists.txt  README.md
android/: local.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/surendramaran/yolov10objectdetector/: ExampleInstrumentedTest.kt
android/app/src/main/assets/: labels.txt
android/app/src/main/cpp/: native-lib.cpp
android/app/src/main/java/com/surendramaran/yolov10objectdetector/: BoundingBox.kt  Constants.kt  Detector.kt  MainActivity.kt  MetaData.kt
android/app/src/main/java/com/surendramaran/yolov10objectdetector/ui/: Animation.kt  CameraFragment.kt  FastBlur.java  OverlayView.kt
android/app/src/main/res/layout/: fragment_camera.xml
android/app/src/main/res/navigation/: nav_graph.xml
android/app/src/main/res/values/: colors.xml  strings.xml
android/app/src/test/java/com/surendramaran/yolov10objectdetector/: ExampleUnitTest.kt
build-sneaky_face-Desktop-Debug/: Makefile  moc_mainwindow.cpp  moc_videowindow.cpp  sneaky_face  ui_mainwindow.h
sneaky_face/: check_model.cpp  face_detect.cpp  face_detect.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  sneaky_face  sneaky_face.pro  videowidget.cpp  videowidget.h  videowindow.cpp  videowindow.h  videowindow.ui
src/: mainwindow.cpp  mainwindow.h  mainwindow.ui  videowindow.cpp
utils/: face_detect.cpp  main.cpp
